[package]
name = "recipecomrades"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
juniper = "0.15.7"
juniper_rocket = "0.8.0"
serde = "1.0.133"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
